<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GabrielClient</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Lego Assistance</string>
	<string name="start_button">Start</string>

    <string name="test_mode">Test</string>
    <string name="demo_mode">Demo</string>
    <string name="request_scheduler">Request for Scheduler</string>
    <string name="start_gabriel_app">Start Gabriel App!</string>
    <string name="welcome">Welcome! Are you ready?</string>
    <string name="exit_gabriel_app">Exit</string>

    <!-- Glass Launch-related strings. -->
    <string name="start_gabriel_voice_trigger">Gabriel Assistant</string>
    
</resources>