<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="20sp"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/text_scheduler_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:text="" />

    <Button
        android:id="@+id/btn_request_scheduler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request_scheduler" />

    <EditText
        android:id="@+id/text_gabriel_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:text="" />

    <RadioGroup
        android:id="@+id/radio_gabriel_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_gabriel_test_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/test_mode"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radio_gabriel_demo_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/demo_mode" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_start_gabriel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_gabriel_app" />

    <Button
        android:id="@+id/btn_exit_gabriel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_gabriel_app" />

</LinearLayout>